--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Super  Background</title>
 </head>
 <body id="gradient">
-    <h1>Background Generator</h1>
+    <h1>Cool Generator</h1>
     <input type="color" class="color1">
     <input type="color" class="color2">
     <h2>Current CSS Background</h2>
