--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>COOL GENERATOR</h1>
     <input type="color" class="color1">
     <input type="color" class="color2">
-    <h2>Current CSS Background</h2>
+    <h2>This is the background</h2>
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
     
